--- a/admin/.env
+++ b/admin/.env
@@ -1,2 +1,2 @@
-VITE_SERVER_URL=http://localhost:4000
-VITE_API_BASE_URL=http://localhost:4000
+VITE_SERVER_URL=https://mm-lms-server.onrender.com
+VITE_API_BASE_URL=https://mm-lms-server.onrender.com
